--- a/index.html
+++ b/index.html
@@ -13,25 +13,38 @@
 <body>
 
 
-     <!-- Navbar -->
-     <nav class="navbar">
-        <ul>
-            <li>
-                <a href="#">
-                    <img src="images/amarelo.png" alt="Logo">
-                </a>
-            </li>
+    <!-- Navbar -->
+    <header id="home">
 
-            <span class="links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </span>
+        <a href="#home">
+            <img src="images/amarelo.png" alt="logo" class="logo">
+        </a>
 
-            <li><a href="#">Socials</a></li>
-        </ul>
-    </nav>
+
+        <nav>
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+        </nav>
+
+        <div class="socials">
+            <a href="https://www.facebook.com/pacospadel" target="_blank">
+                <img src="images/facebook.svg" alt="facebook" class="social-logo-face">
+            </a>
+
+            <a href="https://www.instagram.com/pacospadel/" target="_blank">
+                <img src="images/instagram.svg" alt="instagram" class="social-logo-insta">
+            </a>
+        </div>
+
+
+    </header>
+
+    <div class="scroll">
+        <p>SCROLL</p>
+    </div>
+
 
     <!-- Hero Section -->
     <section class="hero">
