Finished animated menu

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <title>Paços Padel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
 <body>
+
+    <!-- MOBILE SCREEN -->
+    
+    <input type="checkbox" id="menu" class="hamburger">
+
+    <!-- END MOBILE SCREEN -->
 
 
     <!-- Navbar -->
@@ -19,6 +26,15 @@
         <a href="#home">
             <img src="images/amarelo.png" alt="logo" class="logo">
         </a>
+
+
+        <!-- MOBILE SCREEN -->
+        <label for="menu">
+            <div></div>
+            <div></div>
+            <div></div>
+        </label>
+        <!-- END MOBILE SCREEN -->
 
 
         <nav>
@@ -43,6 +59,8 @@
 
     <div class="scroll">
         <p>SCROLL</p>
+        <!-- Add chevron icon from google materials-->
+        <i class="material-icons">expand_more</i>
     </div>
 
 
