First version header done

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <nav>
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#contact">Contact</a>
+            <a href="#about">Sobre Nós</a>
+            <a href="#services">Academia</a>
+            <a href="#contact">Reservar</a>
         </nav>
 
         <div class="socials">
@@ -68,8 +68,8 @@
     <section class="hero">
         <div class="hero-content">
             <h1>MAIS DO QUE UM JOGO</h1>
-            <p>Your journey begins here.</p>
-            <button class="hero-button">Get Started</button>
+            <p>4 campos indoor climatizados</p>
+            <button class="hero-button">Reservar</button>
         </div>
     </section>
 
