--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--link to file script.js-->
+    <script src="script.js" defer></script>
 
 </head>
 
@@ -39,9 +41,9 @@
 
         <nav>
             <a href="#home" class="active">Home</a>
-            <a href="#about">Sobre Nós</a>
-            <a href="#services">Academia</a>
-            <a href="#contact">Reservar</a>
+            <a href="#sobre">Sobre Nós</a>
+            <a href="#academia">Academia</a>
+            <a href="#reservar">Reservar</a>
         </nav>
 
         <div class="socials">
