--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>MAIS DO QUE UM JOGO</h1>
-            <p>4 campos indoor climatizados</p>
+            <p>Marque o seu!</p>
             <button class="hero-button">Reservar</button>
         </div>
     </section>
@@ -80,10 +80,40 @@
             <h1> Aulas de Padel <span>*</span> Treinadores Especializados <span>*</span> Campos Climatizados <span>*</span> Bar <span>*</span> Loja <span>*</span></h1>
             <h1> Aulas de Padel <span>*</span> Treinadores Especializados <span>*</span> Campos Climatizados <span>*</span> Bar <span>*</span> Loja <span>*</span></h1></div>
 
-    <section class="about">
-        <div class="about-content">
-            <h1>ABOUT US</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nunc nec
+
+    <!-- About Section -->
+
+    <section class="about" id="sobre">
+        
+        <div class="content">
+            <h1>PAÇOS PADEL</h1>
+
+            <div class="cards">
+                <div class="card">
+                    <img src="images/bola.png" alt="bola" class="bola">
+                    <h2>Missão</h2>
+                    <p>Proporcionar momentos únicos de convívio e promover a prática desportiva.</p>
+                    <i class="material-icons">bolt</i>
+                </div>
+
+                <div class="card">
+                    <img src="images/raquete.png" alt="raquete" class="raquete">
+                    <h2>Visão</h2>
+                    <p>Ser reconhecido como um espaço de excelência, sinónimo de desporto e socialização.</p>
+                    <i class="material-icons">visibility</i>
+                </div>
+
+                <div class="card">
+                    <img src="images/shoes.png" alt="valores" class="shoes">
+                    <h2>Valores</h2>
+                    <p>Ética e Espírito de Equipa <br>
+                        Integridade e Disciplina <br>
+                        Credibilidade e Confiança.
+                    </p>
+                    <i class="material-icons">star</i>
+                </div>
+            </div>
+
         </div>
     </section>        
   
