--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
     </section>        
   
 
+    <!-- Mapa -->
+    <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1155.751636073509!2d-8.374809420947509!3d41.294745738422975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd248dd66d74f831%3A0x6bd00eea1eccc247!2sPa%C3%A7os%20Padel!5e0!3m2!1spt-PT!2spt!4v1726160331469!5m2!1spt-PT!2spt" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="mapa-text">
+            <h1>ONDE NOS ENCONTRAR</h1>
+            <p>
+                Rua do Padel, 123, 1234-567 Paços de Ferreira
+            </p>
+           </div> 
+    </div>
 </body>
 
 </html>
