--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
     <!-- About Section -->
 
     <section class="about" id="sobre">
+
+        <div class="blob"></div>
+
+        <div class="synth">
+            <img src="images/synth.png" alt="synth" class="synth-img">
+        </div>
         
         <div class="content">
             <h1>PAÇOS PADEL</h1>
