Added fade in animationms

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <div class="scroll">
         <p>SCROLL</p>
         <!-- Add chevron icon from google materials-->
-        <i class="material-icons">expand_more</i>
+        <i class="material-icons">arrow_downwards</i>
     </div>
-
+    
 
     <!-- Hero Section -->
     <section class="hero">
@@ -76,9 +76,10 @@
     </section>
 
         <div class="marquee">
-            <h1> Aulas de Padel <span>*</span> Treinadores Especializados <span>*</span> Campos Climatizados <span>*</span> Bar <span>*</span> Loja <span>*</span></h1>
-            <h1> Aulas de Padel <span>*</span> Treinadores Especializados <span>*</span> Campos Climatizados <span>*</span> Bar <span>*</span> Loja <span>*</span></h1>
-            <h1> Aulas de Padel <span>*</span> Treinadores Especializados <span>*</span> Campos Climatizados <span>*</span> Bar <span>*</span> Loja <span>*</span></h1></div>
+            <h1> Aulas de Padel <span>◦</span> Treinadores Especializados <span>◦</span> Campos Climatizados <span>◦</span> Bar <span>◦</span> Loja <span>◦</span></h1>
+            <h1> Aulas de Padel <span>◦</span> Treinadores Especializados <span>◦</span> Campos Climatizados <span>◦</span> Bar <span>◦</span> Loja <span>◦</span></h1>
+            <h1> Aulas de Padel <span>◦</span> Treinadores Especializados <span>◦</span> Campos Climatizados <span>◦</span> Bar <span>◦</span> Loja <span>◦</span></h1>
+        </div>
 
 
     <!-- About Section -->
@@ -132,7 +133,7 @@
             <p>
                 Rua do Padel, 123, 1234-567 Paços de Ferreira
             </p>
-           </div> 
+        </div> 
     </div>
 </body>
 
