Added contact icons

--- a/index.html
+++ b/index.html
@@ -131,8 +131,33 @@
         <div class="mapa-text">
             <h1>ONDE NOS ENCONTRAR</h1>
             <p>
-                Rua do Padel, 123, 1234-567 Paços de Ferreira
+                <i class="material-icons">location_on</i>
+                Rua Entre Muros S/N, 4590-051, Paços de Ferreira            
             </p>
+
+            <p>
+                <i class="material-icons">phone</i>
+                926 745 332
+                <a href="https://wa.me/1234567890?text=Ola!%2C%20Quero%20reservar%20um%20campo." target="_blank">
+                    Messagem por WhatsApp
+                    <i class="material-icons">send</i>
+                </a>
+
+            </p>
+
+            <p>
+                <i class="material-icons">email</i>
+                <a href="mailto:geral@pacospadel.pt" class="email"> 
+                geral@pacospadel.pt
+                </a>
+            </p>
+
+            <p>
+                <i class="material-icons">schedule</i>
+                Todos os dias: 9h - 23h
+            </p>
+
+
         </div> 
     </div>
 </body>
