--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paços Padel</title>
+    <title>Paços Padel - Miguel</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+
+    <!-- Preloader Wrapper -->
+    <div id="preloader">
+        <div class="spinner"></div> <!-- Simple spinner or custom loader content -->
+    </div>
+
+
 
     <!-- MOBILE SCREEN -->
     
@@ -26,7 +33,7 @@
     <header id="home">
 
         <a href="#home">
-            <img src="images/amarelo.png" alt="logo" class="logo">
+            <img src="images/amarelo.png" alt="logo" class="logo" loading="lazy">
         </a>
 
 
@@ -48,11 +55,11 @@
 
         <div class="socials">
             <a href="https://www.facebook.com/pacospadel" target="_blank">
-                <img src="images/facebook.svg" alt="facebook" class="social-logo-face">
+                <img src="images/facebook.svg" alt="facebook" class="social-logo-face" loading="lazy">
             </a>
 
             <a href="https://www.instagram.com/pacospadel/" target="_blank">
-                <img src="images/instagram.svg" alt="instagram" class="social-logo-insta">
+                <img src="images/instagram.svg" alt="instagram" class="social-logo-insta" loading="lazy">
             </a>
         </div>
 
@@ -89,7 +96,7 @@
         <div class="blob"></div>
 
         <div class="synth">
-            <img src="images/synth.png" alt="synth" class="synth-img">
+            <img src="images/synth.png" alt="synth" class="synth-img" loading="lazy">
         </div>
         
         <div class="content">
@@ -97,21 +104,21 @@
 
             <div class="cards">
                 <div class="card">
-                    <img src="images/bola.png" alt="bola" class="bola">
+                    <img src="images/bola.png" alt="bola" class="bola" loading="lazy">
                     <h2>Missão</h2>
                     <p>Proporcionar momentos únicos de convívio e promover a prática desportiva.</p>
                     <i class="material-icons">bolt</i>
                 </div>
 
                 <div class="card">
-                    <img src="images/raquete.png" alt="raquete" class="raquete">
+                    <img src="images/raquete.png" alt="raquete" class="raquete" loading="lazy">
                     <h2>Visão</h2>
                     <p>Ser reconhecido como um espaço de excelência, sinónimo de desporto e socialização.</p>
                     <i class="material-icons">visibility</i>
                 </div>
 
                 <div class="card">
-                    <img src="images/shoes.png" alt="valores" class="shoes">
+                    <img src="images/shoes.png" alt="valores" class="shoes" loading="lazy">
                     <h2>Valores</h2>
                     <p>Ética e Espírito de Equipa <br>
                         Integridade e Disciplina <br>
@@ -160,6 +167,14 @@
 
         </div> 
     </div>
+
+    <!-- Footer -->
+    <section class="footer">
+            <h1>PAÇOS PADEL</h1>
+            <p>© 2021 Paços Padel. Todos os direitos reservados.</p>
+    </section>
+
+
 </body>
 
 </html>
